# kanankumiawase_v1.0

./: .gitignore  README.md  app.py  bsched.ps1  check_display.py  create_team_list.py  pyproject.toml  read_excel.py  requirements.txt  streamlit_app.py  工程表.md
.github/workflows/: generate.yml
.streamlit/: config.toml  secrets.toml.example
samples/: チームリスト_サンプル.xlsx  チームリスト_サンプル_filled.xlsx  チームリスト_テンプレ.xlsx
scripts/: 01_make_master_from_schedule.ps1  02_export_from_master.ps1  report_diversity.py
src/badminton_program/: cli.py  scheduler.py
